--- a/src/components/Button/button.css
+++ b/src/components/Button/button.css
@@ -10,30 +10,48 @@
   justify-content: center;
   align-items: center;
   transition: 0.15s all;
+  background-color: var(--white-color);
+}
+
+.light {
+  color: white;
+}
+
+.dark {
+  color: black;
+}
+
+.button:hover {
+  -webkit-perspective: 1000;
+  transform: scale(1.01);
 }
 
 .button.flat:hover {
-  box-shadow: inset 0px 0px 5px 1px rgba(0,0,0,0.1);
+  transform: scale(1);
+}
+
+.button.flat:hover {
+  box-shadow: inset 0px 0px 5px 2px rgba(0,0,0,0.1);
 }
 
 .button.flat:active {
-  box-shadow: inset 0px 0px 10px 1px rgba(0,0,0,0.1);
+  box-shadow: inset 0px 0px 10px 2px rgba(0,0,0,0.1);
 }
 
 .button.float:hover {
-  box-shadow: 0px 0px 15px 2px rgba(0,0,0,0.15);
+  box-shadow: 0px 0px 23px 2px rgba(0,0,0,0.15);
 }
 
 .button.float:active {
-  box-shadow: 0px 0px 15px 2px rgba(0,0,0,0.2);
+  box-shadow: 0px 0px 26px 2px rgba(0,0,0,0.17);
 }
 
 .button.top:hover {
-  box-shadow: 0px 0px 15px 2px rgba(0,0,0,0.25);
+  box-shadow: 0px 0px 23px 2px rgba(0,0,0,0.2);
 }
 
 .button.top:active {
-  box-shadow: 0px 0px 15px 2px rgba(0,0,0,0.3);
+  box-shadow: 0px 0px 26px 2px rgba(0,0,0,0.22);
 }
 
 .children {
@@ -77,9 +95,9 @@
 }
 
 .float {
-  box-shadow: 0px 0px 15px 1px rgba(0,0,0,0.1);
+  box-shadow: 0px 0px 20px 1px rgba(0,0,0,0.1);
 }
 
 .top {
-  box-shadow: 0px 0px 15px 1px rgba(0,0,0,0.2);
+  box-shadow: 0px 0px 20px 1px rgba(0,0,0,0.2);
 }
