--- a/src/components/Button/button.css
+++ b/src/components/Button/button.css
@@ -10,7 +10,7 @@
   justify-content: center;
   align-items: center;
   transition: 0.15s all;
-  background-color: var(--white-color);
+  -webkit-font-smoothing: subpixel-antialiased;
 }
 
 .light {
@@ -22,7 +22,7 @@
 }
 
 .button:hover {
-  -webkit-perspective: 1000;
+  
   transform: scale(1.01);
 }
 
