--- a/src/components/App/app.module.css
+++ b/src/components/App/app.module.css
@@ -1,3 +1,11 @@
 .app {
   font-family: 'Montserrat', sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.app * {
+  margin: 1rem 0;
 }
