--- a/src/components/BookCard/bookcard.module.css
+++ b/src/components/BookCard/bookcard.module.css
@@ -15,7 +15,7 @@
   flex-direction: column;
   width: 15rem;
   justify-content: center;
-  margin: 0 2rem;
+  margin: 0 0 0 2rem;
 }
 
 .Description {
