--- a/src/components/BookCard/bookcard.module.css
+++ b/src/components/BookCard/bookcard.module.css
@@ -1,7 +1,7 @@
 .Container {
   display: flex;
   flex-direction: row;
-  width: fit-content;
+  width: 500px;
 }
 
 .LeftContainer {
@@ -15,9 +15,5 @@
   flex-direction: column;
   width: 15rem;
   justify-content: center;
-  margin: 0 0 0 2rem;
-}
-
-.Description {
-  margin: 0.3rem 0 1rem 0;
+  padding: 0 0 0 2rem;
 }
