--- a/src/components/Text/text.module.css
+++ b/src/components/Text/text.module.css
@@ -5,17 +5,18 @@
 
 
 .h1 {
-  margin: 0 0 1rem 0;
+  margin: 0 0 1rem 0 !important;
   font-size: 2.5rem;
 }
 
 .title {
-  margin: 0 0 0.5rem 0;
+  margin: 0 0 0.5rem 0 !important;
   font-size: 1.5rem;
+  text-overflow: ellipsis;
 }
 
 .subtitle {
-  margin: 0 0 0.2rem 0;
+  margin: 0 0 0.2rem 0 !important;
   font-size: 1.2rem;
   font-weight: lighter;
 
