--- a/src/components/App/app.module.css
+++ b/src/components/App/app.module.css
@@ -3,9 +3,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  height: 100vh;
+  overflow: hidden;
 }
 
-.app .content{
-  margin: 1rem 0;
+.content{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  overflow: scroll;
 }
