--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,17 +1,13 @@
 .Container{
     width: 100%;
     height: 6rem;
-    top: 0%;
-    left: 0%;
-    position: absolute;
-    position: fixed;
     padding-left: 5rem; 
     display: flex;
     flex-direction: row;
-    align-content: center;
+    align-items: center;
+    justify-content: center;
     vertical-align: 50%;
     background-color: #2A2644;
-    
 }
 
 .Logo{
@@ -19,7 +15,8 @@
     height: 4rem;
     display: flex;
     flex-direction: row;
-    align-content: center;
+    align-items: center;
+    justify-content: center;
 }
 
 .LogoImg{
@@ -36,7 +33,8 @@
     left: 5rem;
     display: flex;
     flex-direction: row;
-    align-content: center;
+    align-items: center;
+    justify-content: center;
 }
 
 .bookInput{
@@ -55,7 +53,8 @@
     left: 10rem;
     display: flex;
     flex-direction: row;
-    align-content: center;
+    align-items: center;
+    justify-content: center;
 }
 
 .UserLogIn{
@@ -63,7 +62,8 @@
     height: 2rem;
     display: flex;
     flex-direction: row;
-    align-content: center;
+    align-items: center;
+    justify-content: center;
 }
 
 .UserInput{
@@ -82,11 +82,6 @@
     left: 4rem;
     border-radius: 10px;
     font-size: 1rem;
-}
-
-@fontface {
-    font-family: 'Montserrat', sans-serif;
-    src: url('https://fonts.googleapis.com/css?family=Montserrat');
 }
 
 .Text{
