--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,18 +1,22 @@
 .Container{
+    height: 4rem;
     width: 100%;
-    height: 6rem;
-    padding-left: 5rem; 
+    padding: 0 7rem; 
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     vertical-align: 50%;
     background-color: #2A2644;
+    box-sizing: border-box;
+}
+
+input {
+    padding: 0 0.75rem;
+    height: 2rem !important;
 }
 
 .Logo{
-    width: 30rem;
-    height: 4rem;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -20,37 +24,29 @@
 }
 
 .LogoImg{
-    width: 15rem;
-    height: 4rem;
-    position: relative;
-    left: 25%;
+    width: 124.5px;
+    height: 30.75px;
 }
 
 .Input{
-    width: 30rem;
     height: 4rem;
-    position: relative;
-    left: 5rem;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    margin-left: 4rem;
 }
 
 .bookInput{
     width: 20rem;
     height: 1.5rem;
-    left: 1rem;
-    position: relative;
     border-radius: 10px;
     font-size: 1rem;
+    margin-left: 1rem;
 }
 
 .User{
-    width: 40rem;
     height: 4rem;
-    position: relative;
-    left: 10rem;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -69,24 +65,23 @@
 .UserInput{
     width: 10rem;
     height: 1.5rem;
-    position: relative;
-    left: 3rem;
     border-radius: 10px;
     font-size: 1rem;
+    margin-left: 1rem;
 }
 
 .PassInput{
     width: 10rem;
     height: 1.5rem;
-    position: relative;
-    left: 4rem;
     border-radius: 10px;
     font-size: 1rem;
+    margin-left: 1rem;
+    margin-right: 1.25rem;
 }
 
 .Text{
     font-size: 1.5rem;
-    margin-right: 0%;
+    margin: 0;
     color: #FBFBFF;
 }
 
