votes en playlist

--- a/src/components/Views/book.module.css
+++ b/src/components/Views/book.module.css
@@ -16,7 +16,7 @@
 }
 
 .book .content .leftContainer hr{
-  width: 80%;
+  width: 90%;
 }
 
 
@@ -42,6 +42,16 @@
 
 .book .content .leftContainer .infoCol h3{
   margin-top: 0;
+}
+
+.book .content .leftContainer .postPlaylist{
+  width: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.book .content .leftContainer .postPlaylist *{
+  flex: 1;
 }
 
 .book .content .rightContainer{
