--- a/src/components/BookCard/bookcard.module.css
+++ b/src/components/BookCard/bookcard.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   width: 500px;
+  margin: 3rem 0.5rem;
 }
 
 .LeftContainer {
@@ -14,10 +15,14 @@
   display: flex;
   flex-direction: column;
   width: 15rem;
-  justify-content: center;
+  justify-content: space-between;
   padding: 0 0 0 2rem;
 }
 
 .text {
   margin-left: 1rem !important;
+}
+
+.rating {
+  margin-top: 1rem;
 }
