--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     vertical-align: 50%;
     background-color: #2A2644;
     box-sizing: border-box;
@@ -20,7 +20,8 @@ input {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: start;
+    flex:1;
 }
 
 .LogoImg{
@@ -34,7 +35,7 @@ input {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    margin-left: 4rem;
+    flex:1;
 }
 
 .bookInput{
@@ -92,3 +93,10 @@ input {
 .InputTextLogged {
     width: 40rem;
 }
+
+.Buttons {
+    flex:1;
+    display: flex;
+    justify-content: end;
+}
+
