--- a/src/components/LogInForm/login.module.css
+++ b/src/components/LogInForm/login.module.css
@@ -12,6 +12,20 @@ input {
   height: 2rem !important;
 }
 
+
+.text_input {
+  padding: 8px;
+  display: block;
+  border: none;
+  border-bottom: 1px solid #ccc;
+  width: 15rem;
+  background-color: white !important;
+}
+
+.text_input:focus {
+  background-color: white;
+}
+
 .Input{
   height: 4rem;
   display: flex;
@@ -30,18 +44,14 @@ input {
 }
 
 .UserInput{
-  width: 10rem;
   height: 1.5rem;
-  border-radius: 10px;
   font-size: 1rem;
   flex: 1;
-  margin: 0.5rem 0rem 0rem 0rem;
+  margin: 0.5rem 0rem;
 }
 
 .PassInput{
-  width: 10rem;
   height: 1.5rem;
-  border-radius: 10px;
   font-size: 1rem;
   flex: 1;
   margin: 0.5rem 0rem;
