--- a/src/components/RegisterForm/register.module.css
+++ b/src/components/RegisterForm/register.module.css
@@ -12,6 +12,20 @@ input {
   height: 2rem !important;
 }
 
+.text_input {
+  padding: 8px;
+  display: block;
+  border: none;
+  border-bottom: 1px solid #ccc;
+  width: 15rem;
+  background-color: white !important;
+  margin: 1rem;
+}
+
+.text_input:focus {
+  background-color: white;
+}
+
 .Input{
   height: 4rem;
   display: flex;
