--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
     vertical-align: 50%;
     background-color: #2A2644;
     box-sizing: border-box;
@@ -21,7 +21,6 @@ input {
     flex-direction: row;
     align-items: center;
     justify-content: start;
-    flex:1;
 }
 
 .LogoImg{
@@ -35,7 +34,6 @@ input {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    flex:1;
 }
 
 .bookInput{
@@ -95,7 +93,6 @@ input {
 }
 
 .Buttons {
-    flex:1;
     display: flex;
     justify-content: end;
 }
