--- a/src/components/PlaylistCard/playlistcard.module.css
+++ b/src/components/PlaylistCard/playlistcard.module.css
@@ -7,8 +7,22 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-content: center;
+  align-items: center;
+  margin: 0rem 0rem 0rem 1rem;
 }
 
 .playlistCard .votesContainer h3{
-  margin: 0;
+ margin: 0rem;
+}
+
+.playlistCard .votesContainer .upDownButton{
+  opacity: 0.6;
+  height: 20px;
+  width: 20px;
+}
+
+.playlistCard .votesContainer .upDownButton:hover{
+  opacity: 1;
+  cursor: pointer;
 }
